	PR other/64370 	* sreal.c (sreal::to_double): Use ldexp instead of scalbnl.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@219489 138bc75d-0d04-0410-961f-82ee72b054a4